infra/k8s/medication-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medication-depl
  labels:
    app: medication-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medication
  template:
    metadata:
      labels:
        app: medication
    spec:
      containers:
        - name: medication
          image: 000000000000.dkr.ecr.ap-southeast-1.amazonaws.com/example-app:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: medication-srv
  namespace: default
spec:
  selector:
    app: medication
  ports:
    - name: medication
      protocol: TCP
      port: 6000
      targetPort: 6000
  type: NodePort
