infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb
  rules:
    - host: prod-backend.wellness-guard.com
      http:
        paths:
          - path: /api/v1/auth/
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3001
          - path: /api/v1/notification/
            pathType: Prefix
            backend:
              service:
                name: notification-srv
                port:
                  number: 5000
          - path: /api/v1/medic/
            pathType: Prefix
            backend:
              service:
                name: medication-srv
                port:
                  number: 6000
